Fix the page heading alignment

--- a/assets/sass/rhelements.scss
+++ b/assets/sass/rhelements.scss
@@ -301,7 +301,7 @@ main {
   }
   
   #content {
-    padding: 2rem 2rem 0;
+    padding: 1.5rem 2rem 0;
     margin-right: 2rem;
     
     @media (min-width: 1200px) {
